--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,3 +1,6 @@
+body {
+  font-family:"Microsoft YaHei";
+}
 * {
   margin: 0;
   padding: 0;
@@ -46,7 +49,7 @@ header {
 .header .nav-list .nav-item {
   font-size: 16px;
   display: inline-block;
-  margin: 0 28px;
+  margin: 0 22px;
   color: #333;
   font-weight: bold;
 }
@@ -55,6 +58,52 @@ header {
 }
 .header .nav-list .nav-item:hover {
   color: #ff9d00;
+}
+.header .search{
+  height: 28px;
+  margin-top: 30px;
+  width: 250px;
+  overflow: hidden;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  border: 1px solid #ff9d00;
+  margin-left: 30px;
+  
+}
+.header form{
+  height: 30px;
+  overflow: hidden;
+  
+}
+.header .search .input-text{
+  box-sizing: border-box;
+  padding-left: 30px;
+  border: 0;
+  outline: 0;
+  height: 30px;
+  width: 180px;
+  line-height: 30px;
+  display: block;
+  float: left;
+  background: url(../images/search.png) 8px center no-repeat;
+  background-size: 18px 18px;
+}
+.header .search .search-btn{
+  height: 30px;
+  line-height: 30px;
+  display: block;
+  width: 60px;
+  float: right;
+  border: 0;
+  outline: 0;
+  background: transparent;
+  border-left: 1px solid #e28c01;
+  background: #ff9d00;
+  color: #fff;
+  cursor: pointer;
 }
 .header .header-right .download {
   font-size: 16px;
